--- a/gui_util/mainwindow.ui
+++ b/gui_util/mainwindow.ui
@@ -71,7 +71,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="label_3">
+         <widget class="QLabel" name="lbNewCount">
           <property name="text">
            <string>?</string>
           </property>
@@ -102,7 +102,7 @@
      <x>0</x>
      <y>0</y>
      <width>388</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
